<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="244dp"
        android:layout_height="230dp"
        android:src="@drawable/cashew1" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Cashew"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/brown"
        android:fontFamily="@font/nunito_sans"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="LOGIN"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/nunito_sans"
        android:onClick="logout"
        android:text="Logout"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/deleteaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="Delete Account"
        android:textSize="20sp" />



</LinearLayout>