...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_budget_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_weight="19"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/addBudgetButton"
            android:layout_width="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:textColor  = "@color/brown"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:layout_marginLeft="2dp"
            android:text="Add Budget" />

        <Button
            android:id="@+id/back"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
...
