...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/addCategoryButton"
            android:layout_width="181dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="2dp"
            android:layout_weight="25"
            android:textColor  = "@color/brown"
            android:fontFamily="@font/nunito_sans"
            android:text="Add Category"
            android:textSize="12dp" />



        <Button
            android:id="@+id/back"
...
